--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -2,8 +2,8 @@
 
 one:
   course_name: MyString
-  course_code: MyString
+  entity: one
 
 two:
   course_name: MyString
-  course_code: MyString
+  entity: two
